test: remove source-code generating tests